PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? Sep 2006, PHP 5.2.0
- Fixed bug #38844 (curl_easy_strerror() is defined only since cURL 7.12.0).
  (Tony)
- Fixed bug #38574 (missing curl constants and improper constant detection).
  (Ilia)
- Fixed bug #34066 (recursive array_walk causes segfault). (Tony)

14 Sep 2006, PHP 5.2.0RC4
- Added DSA key generation support to openssl_pkey_new(), FR #38731
  (marci at balabit dot hu, Tony)
- Removed current working directory from the php.ini search path for CLI and
  readded it for other SAPIs (restore to pre 5.1.x behavior). (Edin)
- Fixed bug #38850 (lookupNamespaceURI doesn't return default namespace). (Rob)
- Fixed bug #38813 (DOMEntityReference->__construct crashes when called 
  explicitly). (Rob)
- Fixed bug #38779 (engine crashes when require()'ing file with syntax error 
  through userspace stream wrapper). (Tony, Dmitry)
- Fixed bug #38772 (inconsistent overriding of methods in different visibility
  contexts). (Dmitry)
- Fixed bug #38759 (PDO sqlite2 empty query causes segfault). (Tony)
- Fixed bug #38721 (Invalid memory read in date_parse()). (Tony, Derick)
- Fixed bug #38700 (SoapClient::__getTypes never returns). (Dmitry)
- Fixed bug #38693 (curl_multi_add_handle() set curl handle to null). (Ilia)
- Fixed bug #38687 (sockaddr local storage insufficient for all sock
  families). (Sara)
- Fixed bug #38661 (mixed-case URL breaks url-wrappers). (Ilia)
- Fixed bug #38464 (array_count_values() mishandles numeric strings). 
  (Matthew Wilmas, Ilia)
- Fixed bug #38096 (large timeout values ignored on 32bit machines in
  stream_socket_accept() and stream_socket_client()). (Ilia)
- Fixed bug #37923 (Display constant value in reflection::export). (Johannes)
- Fixed bug #37779 (empty include_path leads to search for files inside /).
  (jr at terragate dot net, Ilia)

31 Aug 2006, PHP 5.2.0RC3