@@ -60,10 +60,14 @@ static int pgsql_stmt_dtor(pdo_stmt_t *stmt TSRMLS_DC)
 		char *q = NULL;
 		PGresult *res;
 
-		spprintf(&q, 0, "DEALLOCATE %s", S->stmt_name);
-		res = PQexec(H->server, q);
-		efree(q);
-		if (res) PQclear(res);
+		if (S->is_prepared) {
+			spprintf(&q, 0, "DEALLOCATE %s", S->stmt_name);
+			res = PQexec(H->server, q);
+			efree(q);
+			if (res) {
+				PQclear(res);
+			}
+		}
 		efree(S->stmt_name);
 		S->stmt_name = NULL;
 	}
